Spotify単体の歌詞取得を修正